2009-11-04  Alpha Lam  <hclam@chromium.org>

Reviewed by Eric Carlson.

        Volume slider doesn't have a thumb
        https://bugs.webkit.org/show_bug.cgi?id=31135

        Fixed an incorrect if statement that prevents volume slider
        being updated.

        The statement checks if the slider value equals to the current
        volume value of the media control to avoid updating the volume
        slider. Updating the volume slider control shouldn't be within
        this condition because we explicitly set them to be equals
        during creation of the controls and also when mouse events are
        received on the volume control.

        No new tests because existing code breaks:
        LayoutTests/media/video-volume-slider.html

        It should now start passing on Chromium.

        * rendering/MediaControlElements.cpp:
        (WebCore::MediaControlVolumeSliderElement::update):
        Update the volume slider regardless of the current volume value
        of the media control.

Canonical link: https://commits.webkit.org/41965@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50535 268f45cc-cd09-0410-ab3c-d52691b4dbfc